--- a/proposal/jensen-pres.tex
+++ b/proposal/jensen-pres.tex
@@ -1,4 +1,4 @@
-% Created 2023-03-06 Mon 15:48
+% Created 2023-03-08 Wed 18:08
 % Intended LaTeX compiler: pdflatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage[utf8]{inputenc}
@@ -13,6 +13,9 @@
 \usepackage{capt-of}
 \usepackage{hyperref}
 \usetheme[progressbar=foot]{metropolis}
+\usepackage[sorting=ynt]{biblatex}
+\addbibresource{/home/andrew/repo/lit-review/src/myBib.bib}
+\addbibresource{~/org/biblio.bib}
 \usepackage{caption}
 \captionsetup[figure]{labelformat=empty}
 \DeclareMathOperator*{\argmax}{\arg\!max}
@@ -33,9 +36,6 @@
  pdfsubject={},
  pdfcreator={Emacs 28.1 (Org mode 9.6)}, 
  pdflang={English}}
-\usepackage{biblatex}
-\addbibresource{/home/andrew/repo/lit-review/src/myBib.bib}
-\addbibresource{~/org/biblio.bib}
 \begin{document}
 
 \maketitle
@@ -44,14 +44,11 @@
 \end{frame}
 
 
-\section{Introduction}
-\label{sec:orgc4b7f7e}
-\begin{frame}[label={sec:org8447ea2}]{Acknowledgments}
+\begin{frame}[label={sec:orgf2c0636},standout]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
-\section{Motivation}
-\label{sec:org6e11516}
-\begin{frame}[label={sec:orgb0e2696}]{The Problem}
+
+\begin{frame}[label={sec:org1e1bafb}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -62,7 +59,9 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{itemize}
 \item No reliable method of clinically assessing and quantifying joint dynamics.
 \begin{itemize}
-\item Too much human supervision, too time consuming
+\item Human supervision
+\item Time consuming
+\item Specialized equipment
 \end{itemize}
 \end{itemize}
 \end{column}
@@ -73,7 +72,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3e2863e}]{Our Proposition}
+\begin{frame}[label={sec:orgb5a3f94}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's knee kinematics during \alert{\alert{activities of daily living}}.
@@ -85,7 +84,7 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org541e026}]{Constraints}
+\begin{frame}[label={sec:org2f73695}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -101,14 +100,12 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\section{Background}
-\label{sec:org20849fd}
-\begin{frame}[label={sec:org9832a6b}]{Projective Geometry}
+\begin{frame}[label={sec:orgc4cfa3a}]{Background - Projective Geometry}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{/home/andrew/repo/lit-review/figures/raster/perspective-projection.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org0e358f3}]{Model-Image Registration}
+\begin{frame}[label={sec:org9a68a46}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -122,19 +119,17 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\section{Historical Methods}
-\label{sec:org0e706ed}
-\begin{frame}[label={sec:org932960c}]{Overview}
+\begin{frame}[label={sec:orgee687ed}]{Historical Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
 \item Skin-mounted motion Capture
 \item Biplane Imaging
 \item Iterative Projections
-\item Model-based Roentgen Stereophotogrammetry
+\item Roentgen Stereophotogrammetry
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgb7c0f47}]{Pre-Computed Projections}
+\begin{frame}[label={sec:org7b996f5}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -158,11 +153,15 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org35be97a}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:orga0fba7b}]{Limitations of Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item Requires an accurate contour from the input image in order to perform calculations.
+\begin{itemize}
+\item Human supervision for isolated contour
+\item Inaccuaracy with naive edge detection
+\end{itemize}
 \end{itemize}
 \end{column}
 \begin{column}{0.6\columnwidth}
@@ -181,13 +180,13 @@ Many different approaches have attempted to solve the model-image registration p
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org471843e}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:org8dd1195}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item Can measure motion of MoCap beads very accurately.
 \item Skin-mounted \autocites{gaoInvestigationSoftTissue2008}[][]{kuoInfluenceSoftTissue2011}[][]{linEffectsSoftTissue2016}.
-\item Bone pins \autocite{lafortuneThreedimensionalKinematicsHuman1992} (any volunteers?).
+\item Bone pins \autocite{lafortuneThreedimensionalKinematicsHuman1992}.
 \end{itemize}
 \end{column}
 
@@ -206,7 +205,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd0bfa82}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:org25f0595}]{Limitations of Motion Capture}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Skin Mounted
@@ -215,8 +214,7 @@ Skin Mounted
 \end{itemize}
 Bone Pins
 \begin{itemize}
-\item Bone Pins
-\item Need I say more?
+\item Any volunteers?
 \end{itemize}
 \end{column}
 
@@ -236,7 +234,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org9283a9b}]{Biplane Imaging}
+\begin{frame}[label={sec:org8a73f6a}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -261,7 +259,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org7d99355}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:org92862ea}]{Limitations of Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -284,7 +282,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org9804825}]{Iterative Projections}
+\begin{frame}[label={sec:orgfc62565}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -309,7 +307,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6f04a08}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:orgd69020f}]{Limitations of (historic) Iterative Projection Methods}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -337,7 +335,7 @@ Bone Pins
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:org3d35cbb}]{Roentgen Stereophotogrammetry (RSA)}
+\begin{frame}[label={sec:orgb265dfe}]{Roentgen Stereophotogrammetry (RSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -356,7 +354,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org09ed61d}]{Limitations of RSA}
+\begin{frame}[label={sec:org758e517}]{Limitations of RSA}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -376,8 +374,8 @@ Bone Pins
 \end{frame}
 
 \section{Aims}
-\label{sec:org1c00efe}
-\begin{frame}[label={sec:org2871e0b}]{Aims}
+\label{sec:org654b5fb}
+\begin{frame}[label={sec:org4796920}]{Aims}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 \begin{block}{Aims 1/2}
@@ -398,11 +396,11 @@ Joint Track Auto Toolkit
 \end{frame}
 
 \subsection{Aim 1 - Joint Track Machine Learning}
-\label{sec:org54ace3f}
-\begin{frame}[label={sec:orgd7265db}]{Goal}
+\label{sec:org6dadc38}
+\begin{frame}[label={sec:orgddc7e42}]{Goal}
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
 \end{frame}
-\begin{frame}[label={sec:org1484938}]{Method}
+\begin{frame}[label={sec:orgc3342e0}]{Method}
 \begin{itemize}
 \item Three-tiered approach
 \begin{itemize}
@@ -415,7 +413,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/pipeline-nocite.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org055886e}]{Autonomous Implant Detection Using Convolutional Neural Networks}
+\begin{frame}[label={sec:orgabb8dc4}]{Autonomous Implant Detection Using Convolutional Neural Networks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -433,7 +431,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd6312cf}]{Neural Network Data}
+\begin{frame}[label={sec:orge22a763}]{Neural Network Data}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -457,7 +455,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6a1a7e8}]{Neural Network Robustness}
+\begin{frame}[label={sec:orga2b77b9}]{Neural Network Robustness}
 \begin{itemize}
 \item Additional augmentations introduced during training \autocite{buslaevAlbumentationsFastFlexible2020}.
 \end{itemize}
@@ -465,7 +463,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/augmentations.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org2f21687}]{Normalized Fourier Descriptor Shape Libraries}
+\begin{frame}[label={sec:orge7ae5e1}]{Normalized Fourier Descriptor Shape Libraries}
 \begin{columns}
 \begin{column}{0.37\columnwidth}
 \begin{itemize}
@@ -484,7 +482,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org7849896}]{Pose Refinement Using Global Optimization}
+\begin{frame}[label={sec:org7f96cf1}]{Pose Refinement Using Global Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -503,7 +501,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgd046b97}]{Contour-based Objective Function}
+\begin{frame}[label={sec:orga52fcb5}]{Contour-based Objective Function}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -524,12 +522,12 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \begin{column}{0.6\columnwidth}
 \begin{center}
-\includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/jtml-registered-implant.png}
+\includegraphics[width=.9\linewidth]{/home/andrew/repo/lit-review/figures/raster/registered-tka.png}
 \end{center}
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org590b43c}]{Improving Robustness}
+\begin{frame}[label={sec:org6912669}]{Improving Robustness}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -544,7 +542,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org891d600}]{Optimization Routine}
+\begin{frame}[label={sec:org0bdda94}]{Optimization Routine}
 \begin{itemize}
 \item No analytic form of the objective function exists, it \alert{\alert{must}} be sampled at points of interest.
 \begin{itemize}
@@ -553,7 +551,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orga4c3d6b}]{Lipschitzian Optimization}
+\begin{frame}[label={sec:orga2f643a}]{Lipschitzian Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -577,7 +575,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{columns}
 \end{frame}
 
-\begin{frame}[label={sec:orgd8b4f45}]{Lipschitzian Optimization without the Lipschitz Constant}
+\begin{frame}[label={sec:orgaa12c6b}]{Lipschitzian Optimization without the Lipschitz Constant}
 \begin{center}
 \includegraphics[width=2.5in]{/home/andrew/repo/lit-review/figures/raster/jones-direct-title.png}
 \end{center}
@@ -592,15 +590,71 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=2.5in]{/home/andrew/repo/lit-review/figures/raster/direct-1D.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orge77dc4d}]{Determining Potentially Optimal Regions}
+\begin{frame}[label={sec:org2f0a68a}]{Trisecting Region}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{equation*}
+  \begin{bmatrix}
+    f(x=c_{1}) & d(c_{1})\\
+    f(x=c_{2}) & d(c_{2})\\
+    \vdots & \vdots \\
+    f(x=c_{N}) & d(c_{N})
+  \end{bmatrix}
+\end{equation*}
+Where
+
+\begin{align*}
+  f(x=c_{i}) &\equiv \text{Sampled function value} \\
+  d(c_{i}) & \equiv \text{ Sub-domain size } \\
+  & \text{ for } i \in [1,N]
+\end{align*}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/direct-1D-stage1.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+\begin{frame}[label={sec:orge8b2e5a}]{Another Iteration}
+\begin{columns}
+\begin{column}{0.4\columnwidth}
+\begin{equation*}
+  \begin{bmatrix}
+    f(x=c_{1}) & d(c_{1})\\
+    f(x=c_{2}) & d(c_{2})\\
+    \vdots & \vdots \\
+    f(x=c_{N}) & d(c_{N})
+  \end{bmatrix}
+\end{equation*}
+Where
+
+\begin{align*}
+  f(x=c_{i}) &\equiv \text{Sampled function value} \\
+  d(c_{i}) & \equiv \text{ Sub-domain size } \\
+  & \text{ for } i \in [1,N]
+\end{align*}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/direct-1D-stage2.png}
+\end{center}
+\end{column}
+\end{columns}
+\end{frame}
+
+\begin{frame}[label={sec:org5c3426c}]{Determining Potentially Optimal Regions}
 \begin{itemize}
-\item Convex hull of region size vs. center value
+\item Convex hull \autocites{grahamEfficientAlgorithDetermining1972}[][]{jarvisIdentificationConvexHull1973}[][]{chanOptimalOutputsensitiveConvex1996}[][]{barberQuickhullAlgorithmConvex1996} of region size vs. center value
 \end{itemize}
+
 \begin{center}
 \includegraphics[width=0.6\textwidth]{/home/andrew/repo/lit-review/figures/raster/direct-convex-hull.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org73f7e23}]{DiRECT for Joint Track Machine Learning}
+\begin{frame}[label={sec:orgf1b7b31}]{DiRECT for Joint Track Machine Learning}
 \begin{itemize}
 \item Search region is along all 6 degrees of freedom.
 \begin{itemize}
@@ -621,13 +675,13 @@ Stage & Budget [Iterations] & Search Range [mm,deg] & Dilation (pixels)\\\empty
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org33fe861}]{Testing Performance}
+\begin{frame}[label={sec:org0846b3c}]{Testing Performance}
 Now that we have our refined poses, how well does out system perform?
 \begin{center}
 \includegraphics[width=\textwidth]{/home/andrew/repo/lit-review/figures/raster/pipeline-nocite.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc8d47fe}]{Validation}
+\begin{frame}[label={sec:org7d6a18e}]{Validation}
 \begin{itemize}
 \item Independent research group using Model-Based RSA.
 \item Determine the level of concordance between the two measurement systems
@@ -635,20 +689,22 @@ Now that we have our refined poses, how well does out system perform?
 \item Bland-Altmann Plots
 \end{itemize}
 \item Achieved clinically acceptable accuracy \autocites{brobergValidationMachineLearning2023}[][]{jensenJointTrackMachine2022}.
+\item Highly repeatable
 \end{itemize}
+
 \begin{center}
-\includegraphics[width=0.77\textwidth]{/home/andrew/repo/lit-review/figures/raster/broberg-bland-altmann.png}
+\includegraphics[width=0.7\textwidth]{/home/andrew/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org4025ee0}]{Awards}
+\begin{frame}[label={sec:orgc0a34b4}]{Awards}
 The work presented in this aim won the HAP Paul Award for Best Paper from the International Society for Technology in Arthroplasty's 2022 Annual Meeting.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{/home/andrew/repo/lit-review/figures/raster/ista-map-paul-talk.jpg}
 \end{center}
 \end{frame}
 \subsection{Aim 2 - Overcoming Single-Plane Limitations}
-\label{sec:orgec65c00}
-\begin{frame}[label={sec:org505e36d}]{Goal}
+\label{sec:org44b998f}
+\begin{frame}[label={sec:org2652051}]{Goal}
 \begin{itemize}
 \item The goal of this aim is to validate and test methods that can overcome single-plane limitations for model-image registration.
 \begin{itemize}
@@ -658,7 +714,7 @@ The work presented in this aim won the HAP Paul Award for Best Paper from the In
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org7d3d336}]{Translation}
+\begin{frame}[label={sec:org2427f54}]{Translation}
 \begin{itemize}
 \item Depth perception is lost when using a single camera.
 \item Utilize a virtual ``spring'' to constrain relative OOP translation between implant components.
@@ -674,7 +730,7 @@ Where
 \end{equation*}
 \end{frame}
 
-\begin{frame}[label={sec:org4ffecd9}]{Symmetry Traps}
+\begin{frame}[label={sec:org2a317e8}]{Symmetry Traps}
 With a symmetric tibial implant, the contour is not always a perfect heuristic for true pose. Human operators typically utilize relative varus-valgus to determine correct pose.
 
 Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high propensity for symmetry traps \autocite{jensenJointTrackMachine2022}.
@@ -683,26 +739,33 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \includegraphics[width=0.7\textwidth]{/home/andrew/repo/lit-review/figs/jtml-paper/fig6-symtrap.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgc9766e1}]{Solving the Symmetric Pose}
+\begin{frame}[label={sec:org0d5cba5}]{Solving the Symmetric Pose}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 \begin{enumerate}
 \item Create a vector from the camera origin to the implant origin (viewing ray).
 \item Determine the axis (\(\vec{m}\)) and angle (\(\theta\)) of rotation between the viewing ray and the symmetric (mediolateral) axis.
 \item Rotate the implant \(-2\theta\) about the same axis.
 \item The final location is the symmetric pose of the object.
 \end{enumerate}
+\end{column}
+\begin{column}{0.6\columnwidth}
+\begin{center}
+\includegraphics[width=0.6\textwidth]{/home/andrew/repo/lit-review/figures/raster/sym-trap.png}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
-
-\begin{frame}[label={sec:orgb13fc63}]{Five Approaches}
+\begin{frame}[label={sec:orgb02457c}]{Four Approaches}
 \begin{itemize}
 \item Virtual ligaments
 \item Binary selection between two poses
 \item Bland-Altmann Calibration Constant
-\item Random Forest
 \item Fully Connected Network
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgedc4a53}]{Virtual Ligaments}
+\begin{frame}[label={sec:orgea93833}]{Virtual Ligaments}
 \begin{equation*}
   J = \alpha L_{1}(I,P) + \beta ML(Fem,Tib) + \gamma VV(Fem,Tib)
 \end{equation*}
@@ -714,7 +777,7 @@ Where
 \end{equation*}
 \end{frame}
 
-\begin{frame}[label={sec:orgfcc0a3d}]{Binary Selection}
+\begin{frame}[label={sec:org54d5c68}]{Binary Selection}
 \begin{enumerate}
 \item Determine optimized pose using \(L_1 + ML\)
 \item Calculate symmetric pose.
@@ -723,7 +786,7 @@ Where
 
 This method can simplify the selection criteria (one fewer hyperparameter).
 \end{frame}
-\begin{frame}[label={sec:orgcd294a9}]{Bland-Altmann Calibration Constant}
+\begin{frame}[label={sec:org5e49510}]{Bland-Altmann Calibration Constant}
 \begin{itemize}
 \item Utilizing Bland-Altmann plots from gold-standard kinematics, create a ``correction constant'' for relative varus/valgus (ad/abduction) angles.
 \item Notice linear trend in BA plots.
@@ -733,7 +796,9 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgedd68e8}]{Fully Connected Network}
+\begin{frame}[label={sec:org2197c22}]{Fully Connected Network}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 \begin{itemize}
 \item Encode symmetric pose calculation into FCN.
 \item Feed femoral and tibial \alert{\alert{pose}} into network.
@@ -746,22 +811,29 @@ This method can simplify the selection criteria (one fewer hyperparameter).
 \item Activity (walking, stair, lunge, etc)
 \end{itemize}
 \end{itemize}
+\end{column}
+
+\begin{column}{0.6\columnwidth}
 \begin{center}
 \includegraphics[width=2.2in]{/home/andrew/repo/lit-review/figures/raster/fcn.png}
 \end{center}
+\end{column}
+\end{columns}
 \end{frame}
 
-
-\begin{frame}[label={sec:org8bb2c5a}]{Timeline}
+\begin{frame}[label={sec:org68f2390}]{Timeline}
 \begin{itemize}
 \item All kinematics data has already been collected.
 \item Completed Methods
 \begin{itemize}
 \item Virtual Ligaments
 \end{itemize}
-\item Pending Methods
+\item In Progress
 \begin{itemize}
 \item Binary Selection
+\end{itemize}
+\item Pending Methods
+\begin{itemize}
 \item Bland-Altmann Calibration
 \item Fully Connected Network
 \end{itemize}
@@ -771,8 +843,8 @@ Journal paper will be ready for submission by June.
 \end{frame}
 
 \subsection{Aim 3 - Pilot Human Study}
-\label{sec:org71a093a}
-\begin{frame}[label={sec:org93a7692}]{Goal}
+\label{sec:orgf58ba0d}
+\begin{frame}[label={sec:org1697639}]{Goal}
 No kinematics studies have exclusively utilized Joint Track Machine Learning; let's be the first.
 
 What are we measuring?
@@ -787,7 +859,7 @@ What are we measuring?
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org78dc200}]{Methods}
+\begin{frame}[label={sec:orgbc47612}]{Methods}
 \begin{itemize}
 \item 20-30 patients
 \item \textasciitilde{}Dozen activities with fluoroscopic machine
@@ -800,13 +872,12 @@ What are we measuring?
 IRB approval \textasciitilde{}4 months out.
 \end{frame}
 
-
 \subsection{Aim 4 - Standardized Kinematics Exam}
-\label{sec:orge3273a1}
-\begin{frame}[label={sec:org59b0aa3}]{Goal}
+\label{sec:orgd413852}
+\begin{frame}[label={sec:org2614c01}]{Goal}
 Establish a ``standard kinematics exam'' by determining the most statistically and anatomically relevent fluoroscopic image(s) to capture during a clinical visit.
 \end{frame}
-\begin{frame}[label={sec:orgfdfc2ae}]{Motivation}
+\begin{frame}[label={sec:org92296c3}]{Motivation}
 \begin{itemize}
 \item We have standardized pain/outcome scores
 \begin{itemize}
@@ -822,7 +893,7 @@ Establish a ``standard kinematics exam'' by determining the most statistically a
 Autonomous kinematics measurements allow researchers to spend more time asking and answering questions rather than fiddling with annoying software.
 \end{frame}
 
-\begin{frame}[label={sec:orga478126}]{Method}
+\begin{frame}[label={sec:org9d47d45}]{Method}
 \begin{itemize}
 \item Use images and kinematics from Aim 3.
 \item Utilize statistical methods to determine covariance and causal/corollary relationships.
@@ -833,13 +904,52 @@ Autonomous kinematics measurements allow researchers to spend more time asking a
 \end{itemize}
 \end{frame}
 \subsection{Aim 5 - Joint Track Auto Toolkit}
-\label{sec:org56ba0ca}
-\begin{frame}[label={sec:org2d67d53}]{Goal}
+\label{sec:org30d73de}
+\begin{frame}[label={sec:org69c971c}]{Joint Track Auto Toolkit (JTAT)}
 Create a freely available Python library that allows other researchers to utilize JTML's model-image registration framework. Extra emphasis will be placed on extensibility to allow other researchers to compose their own registration pipelines.
 \end{frame}
+\begin{frame}[label={sec:org5961f67},fragile, allowframebreaks, label=]{Presentations}
+\begin{refsection}
+  \input{nocites-pres}
+  \printbibliography[title=Presentations]
+\end{refsection}
+\end{frame}
+
+\begin{frame}[label={sec:orgefcd7d8},fragile, allowframebreaks, label=]{Publications}
+\begin{refsection}
+  \input{nocites-pubs}
+  \printbibliography[title=Publications]
+\end{refsection}
+\end{frame}
+
+\begin{frame}[label={sec:org1364a52}]{Timeline}
+\begin{center}
+\begin{tabular}{ll}
+Date(s) & Event\\\empty
+\hline
+2015-2019 & Mech. Eng. B.S, Magna Cum Laude, UF\\\empty
+April 2019 - April 2020 & Internship at Exactech\\\empty
+April 2020 & Started in Miller Lab\\\empty
+August 2020 & Officially Started PhD at UF\\\empty
+November 2021 & Best Presentation Award at ISTA: Emerging Technologies\\\empty
+April 2022 & Submitted JTML for HAP Paul Award\\\empty
+September 2022 & HAP Paul Award at ISTA 2022\\\empty
+\hline
+June 2023 & Single-plane limitations paper submitted\\\empty
+July 2023 & Est. IRB Approval\\\empty
+August 2023 & v1.0 JTAT\\\empty
+December 2023 \textasciitilde{} May 2024 & Patient Data Fully Collected (Aims 3/4)\\\empty
+August 2024 & Papers for Aims 3/4 Submitted\\\empty
+December 2024 - April 2025 & Est. Graduation\\\empty
+\end{tabular}
+\end{center}
+\end{frame}
+\begin{frame}[label={sec:org3e40537},standout]{Thank you!}
+Thanks for listening!!
+\end{frame}
 \section{References}
-\label{sec:orgfe0cae4}
-\begin{frame}[label={sec:orgf163a9d},fragile, allowframebreaks, label=]{References}
+\label{sec:org3337640}
+\begin{frame}[label={sec:orgd871118},fragile, allowframebreaks, label=]{References}
 \AtNextBibliography{\tiny}
 \printbibliography
 \end{frame}
