--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -263,6 +263,14 @@
   file = {/home/andrew/references/docs/Banks-1992_Model based 3D kinematic estimation from 2D perspective silhouettes -/Banks_1992_Model based 3D kinematic estimation from 2D perspective silhouettes -.pdf}
 }
 
+@misc{banksRegioneCaecorumRex2019,
+  title = {In {{Regione Caecorum Rex Est Luscus}} - {{Towards Routine Clinical Examinations}} of {{Joint Kinematics}}},
+  author = {Banks, Scott and Jensen, Andrew James and Flood, Paris},
+  year = {2019},
+  address = {{International Radiostereometry Society Meeting}},
+  copyright = {All rights reserved}
+}
+
 @article{banksVivoKinematicsCruciateretaining1997,
   ids = {scotta.banksVIVOKINEMATICSCRUCIATERETAINING1997},
   title = {In Vivo Kinematics of Cruciate-Retaining and -Substituting Knee Arthroplasties},
@@ -1040,6 +1048,23 @@
   file = {/home/andrew/references/docs/Daems et al-2016_Validation of three-dimensional total knee replacement kinematics measurement/Daems et al_2016_Validation of three-dimensional total knee replacement kinematics measurement.pdf}
 }
 
+@misc{daiComparativeAnalysisFixation2021,
+  title = {Comparative {{Analysis}} of {{Fixation Structure Design}} on the {{Primary Stability}} of {{Cementless TKA}} during {{Walking}}},
+  author = {Dai, Yifei and Wentz, Douglass and Jensen, Andrew and Martin, Brian},
+  year = {2021},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
+}
+
+@misc{daiImpactFixationComponents2021,
+  type = {Podium},
+  title = {Impact of {{Fixation Components}} on {{Primary Stability}} of {{Cementless TKA}} during {{Walking}}},
+  author = {Dai, Yifei and Wentz, Douglas and Jensen, Andrew and Martin, Brian},
+  year = {2021},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
+}
+
 @article{deaslaSixDOFVivo2006,
   title = {Six {{DOF}} in Vivo Kinematics of the Ankle Joint Complex: {{Application}} of a Combined Dual-Orthogonal Fluoroscopic and Magnetic Resonance Imaging Technique},
   shorttitle = {Six {{DOF}} in Vivo Kinematics of the Ankle Joint Complex},
@@ -1419,6 +1444,14 @@
   file = {/home/andrew/references/docs/Flood_Banks-2018_Automated registration of 3-D knee implant models to fluoroscopic images using/Flood_Banks_2018_Automated registration of 3-D knee implant models to fluoroscopic images using.pdf;C\:\\Users\\ajensen123\\Desktop\\Andrew's Vault\\200 Literature\\Notes\\@floodAutomatedRegistration3D2018.md}
 }
 
+@misc{floodPracticalClinicalExamination2019,
+  title = {Towards {{Practical Clinical Examination}} of {{3D Joint Kinematics Using Machine Learning}}},
+  author = {Flood, Paris and Jensen, Andrew and Banks, Scott},
+  year = {2019},
+  address = {{International Society for Technology in Arthroplasty}},
+  copyright = {All rights reserved}
+}
+
 @article{freemanMovementNormalTibiofemoral2005,
   title = {The Movement of the Normal Tibio-Femoral Joint},
   author = {Freeman, M.A.R. and Pinskerova, V.},
@@ -1697,6 +1730,15 @@
   doi = {10.1016/0020-0190(72)90045-2},
   langid = {english},
   file = {/home/andrew/references/docs/Graham-1972_An efficient algorith for determining the convex hull of a finite planar set/Graham_1972_An efficient algorith for determining the convex hull of a finite planar set.pdf;/home/andrew/references/docs/Graham-1972_An efficient algorith for determining the convex hull of a finite planar set/Graham_1972_An efficient algorith for determining the convex hull of a finite planar set2.pdf}
+}
+
+@misc{griffithAutomatedSegmentationGrading2022,
+  type = {Poster},
+  title = {Automated {{Segmentation}} and {{Grading}} of {{Rodent Knee OA Histology}} Using {{Convolutional Neural Networks}}},
+  author = {Griffith, Jacob and Jensen, Andrew and Banks, Scott and Allen, Kyle},
+  year = {2022},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
 }
 
 @article{groodJointCoordinateSystem1983,
@@ -2125,11 +2167,12 @@
   file = {/home/andrew/references/docs/Jaccard-1912_The Distribution of the Flora in the Alpine Zone/Jaccard_1912_The Distribution of the Flora in the Alpine Zone.pdf}
 }
 
-@article{jarvisLDENTIFICATli0NCONVEXHULL,
-  title = {{{ON THE lDENTIFICATli0N OF THE CONVEX HULL OIF A FINITE SET OF POINTS IN THE PLANE}}},
+@article{jarvisIdentificationConvexHull1973,
+  title = {On the {{Identification}} of the {{Convex Hull}} of a {{Finite Set}} of {{Points}} in the {{Plane}}},
   author = {Jarvis, R A},
+  year = {1973},
   langid = {english},
-  file = {/home/andrew/references/docs/Jarvis-_ON THE lDENTIFICATli0N OF THE CONVEX HULL OIF A FINITE SET OF POINTS IN THE/Jarvis_ON THE lDENTIFICATli0N OF THE CONVEX HULL OIF A FINITE SET OF POINTS IN THE.pdf}
+  file = {/home/andrew/references/docs/Jarvis-_ON THE lDENTIFICATli0N OF THE CONVEX HULL OIF A FINITE SET OF POINTS IN THE/Jarvis - On the Identification of the Convex Hull of a Fini.pdf}
 }
 
 @misc{jennyRegistrationKneeKinematics2015,
@@ -2138,6 +2181,58 @@
   year = {2015},
   address = {{Online}},
   abstract = {The restoration of physiological kinematics is one of the goals of a total knee arthroplasty (TKA). Navigation systems have been developed to allow an accurate and precise placement of the implants. But its application to the intraoperative measurement of knee kinematics has not been validated. The hypothesis of this study was that the measurement of the knee axis, femoral rotation, femoral translation with respect to the tibia, and medial and lateral femorotibial gaps during continuous passive knee flexion by the navigation system would be different from that by fluoroscopy taken as reference.}
+}
+
+@misc{jensenAutonomousMeasurement3D2022,
+  type = {Podium},
+  title = {Autonomous {{Measurement}} of {{3D TKA Kinematics}} from {{Dynamic Single-Plane Fluoroscopic Images}}},
+  author = {Jensen, Andrew and Palm, Lindsey and Banks, Scott},
+  year = {2022},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
+}
+
+@misc{jensenAutonomousMethodExtracting2021,
+  title = {An {{Autonomous Method}} for {{Extracting 3D Knee Replacement Kinematics}} from {{Dynamic Single Plane Fluoroscopic Images}}},
+  author = {Jensen, Andrew James and Flood, Paris and Palm, Lindsey and Burton, Will and Rullkoetter, Paul and Banks, Scott},
+  year = {2021},
+  address = {{International Society for Technology in Arthroplasty: Emerging Technologies}},
+  copyright = {All rights reserved}
+}
+
+@misc{jensenAutonomousMethodExtracting2021a,
+  title = {An Autonomous Method for Extracting Joint Kinematics from Single-Plane Fluoroscopy},
+  author = {Jensen, Andrew and Flood, Paris and Palm, Lindsey and Banks, Scott},
+  year = {2021},
+  address = {{International Radiostereometry Society}},
+  copyright = {All rights reserved}
+}
+
+@misc{jensenComparisonClinicalComputational2020,
+  type = {Podium},
+  title = {Comparison of {{Clinical}} and {{Computational Implant Fit Analysis}} in {{Partial Knee Arthroplasty}}},
+  author = {Jensen, Andrew and Dai, Yifei and Gardner, Andrea and Klassen, Mark and Harris, Barton and Valderrabano, Victor and Marquez, Raul and Papalia, Rocco and Pearle, Andrew},
+  year = {2020},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
+}
+
+@misc{jensenDeepLearningImage2023,
+  type = {Virtual {{Scientific Session}}},
+  title = {Deep {{Learning}} for {{Image Processing}} in {{Orthopaedics}}},
+  author = {Jensen, Andrew},
+  year = {2023},
+  address = {{Orthopaedic Research Society}},
+  copyright = {All rights reserved}
+}
+
+@misc{jensenImpactSagittalResection2020,
+  type = {Podium},
+  title = {Impact of {{Sagittal Resection Variability}} on {{Implant Fit}} during {{Partial Knee Arthroplasty}}},
+  author = {Jensen, Andrew and Dai, Yifei and Gardner, Andrea},
+  year = {2020},
+  address = {{Phoenix, AZ}},
+  copyright = {All rights reserved}
 }
 
 @article{jensenJointTrackMachine2022,
@@ -2155,6 +2250,14 @@
   langid = {english},
   keywords = {Quantitative Biology - Quantitative Methods},
   file = {/home/andrew/references/docs/Jensen et al-2022_Joint Track Machine Learning/Jensen et al_2022_Joint Track Machine Learning.pdf}
+}
+
+@misc{jensenRoutineClinicalExamination2020,
+  title = {Towards {{Routine Clinical Examination}} of {{3D Joint Kinematics}}},
+  author = {Jensen, Andrew and Flood, Paris and Palm, Lindsey and Banks, Scott},
+  year = {2020},
+  address = {{Korean Orthopaedic Association}},
+  copyright = {All rights reserved}
 }
 
 @article{jingdongwangDeepHighResolutionRepresentation2020,
